--- a/index.html
+++ b/index.html
@@ -22,14 +22,20 @@
             width: 100%;
             display: flex;
             justify-content: space-between;
+            align-items: center;
             padding: 10px;
-            position: relative;
         }
 
         #welcome-message {
             position: absolute;
             top: 10px;
             left: 10px;
+        }
+
+        #prompt-message {
+            color: yellow; /* Different color for the prompt */
+            margin-top: 50px; /* Space below the welcome message */
+            font-size: 1.2em; /* Slightly larger font */
         }
 
         button {
@@ -48,7 +54,7 @@
 
         .container {
             text-align: center;
-            margin-top: 50px;
+            margin-top: 20px; /* Adjusted margin to position below welcome message */
         }
 
         .video-container {
@@ -58,111 +64,143 @@
         .video {
             margin: 10px 0;
         }
+
+        #add-video-container {
+            display: none;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <header>
-        <div id="welcome-message">CoolKidZ</div>
+        <div id="welcome-message">Welcome back, <span id="username-display"></span>!</div>
         <div>
-            <button id="log-in-btn">Log In</button>
+            <button id="sign-in-btn">Log In</button>
             <button id="sign-out-btn" style="display: none;">Sign Out</button>
             <button id="add-video-btn" style="display: none;">Add Video</button>
         </div>
     </header>
     <div class="container">
         <h1>CoolKidZ</h1>
+        <div id="prompt-message">Please sign in if you have an account.</div> <!-- Prompt message -->
         <div class="video-container" id="video-list">
-            <h2>Videos:</h2>
+            <p>Videos:</p>
             <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/p3NXd3DhH08" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>Skateboard Video</p>
             </div>
-            <div id="user-videos"></div> <!-- Area to display user-uploaded videos -->
+        </div>
+
+        <div id="add-video-container">
+            <h3>Add Your Video</h3>
+            <button id="choose-file-btn">Add File</button>
+            <input type="file" id="file-input" style="display: none;">
+            <input type="text" id="video-url" placeholder="Or enter video URL (YouTube link)">
+            <button id="post-video-btn">Post Video</button>
+            <div id="video-preview" style="display: none;">
+                <h4>Video Preview:</h4>
+                <iframe id="user-video-iframe" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+                <button id="copy-link-btn" style="display: none;">Copy Link</button>
+            </div>
         </div>
     </div>
 
     <script>
-        const logInBtn = document.getElementById('log-in-btn');
+        const signInBtn = document.getElementById('sign-in-btn');
         const signOutBtn = document.getElementById('sign-out-btn');
         const addVideoBtn = document.getElementById('add-video-btn');
         const welcomeMessage = document.getElementById('welcome-message');
-        const userVideosContainer = document.getElementById('user-videos');
+        const usernameDisplay = document.getElementById('username-display');
+        const promptMessage = document.getElementById('prompt-message'); // Prompt message
+        const addVideoContainer = document.getElementById('add-video-container');
+        const chooseFileBtn = document.getElementById('choose-file-btn');
+        const fileInput = document.getElementById('file-input');
+        const videoUrlInput = document.getElementById('video-url');
+        const postVideoBtn = document.getElementById('post-video-btn');
+        const videoPreview = document.getElementById('video-preview');
+        const userVideoIframe = document.getElementById('user-video-iframe');
+        const copyLinkBtn = document.getElementById('copy-link-btn');
 
         function updateUI() {
             const username = localStorage.getItem('coolkidzUsername');
             if (username) {
-                welcomeMessage.textContent = `Welcome back, ${username}!`;
-                logInBtn.style.display = 'none';
+                usernameDisplay.textContent = username;
+                signInBtn.style.display = 'none';
                 signOutBtn.style.display = 'inline';
                 addVideoBtn.style.display = 'inline';
-                loadUserVideos(); // Load user videos when signed in
+                addVideoContainer.style.display = 'block'; // Show add video container
+                promptMessage.style.display = 'none'; // Hide prompt message
             } else {
-                welcomeMessage.textContent = 'CoolKidZ';
-                logInBtn.style.display = 'inline';
+                usernameDisplay.textContent = '';
+                signInBtn.style.display = 'inline';
                 signOutBtn.style.display = 'none';
                 addVideoBtn.style.display = 'none';
-                userVideosContainer.innerHTML = ''; // Clear user videos when not signed in
+                addVideoContainer.style.display = 'none'; // Hide add video container
+                promptMessage.style.display = 'block'; // Show prompt message
             }
         }
 
-        logInBtn.addEventListener('click', () => {
-            // Redirect to the registration page
+        signInBtn.addEventListener('click', () => {
+            // Redirect to registration page
             window.location.href = 'https://wafflenugget.github.io/CoolKidZ-Registration/';
         });
 
         signOutBtn.addEventListener('click', () => {
             localStorage.removeItem('coolkidzUsername');
             updateUI();
-            // Redirect to the registration page after signing out
+            // Redirect to registration page after signing out
             window.location.href = 'https://wafflenugget.github.io/CoolKidZ-Registration/';
         });
 
         addVideoBtn.addEventListener('click', () => {
-            const choice = prompt("Would you like to add a video link or upload a file? (Type 'link' or 'file')").toLowerCase();
-            if (choice === 'link') {
-                const videoFile = prompt("Please enter the URL of your video:");
-                if (videoFile) {
-                    storeVideo(videoFile);
-                }
-            } else if (choice === 'file') {
-                const videoInput = document.createElement('input');
-                videoInput.type = 'file';
-                videoInput.accept = 'video/*';
-                videoInput.onchange = () => {
-                    const file = videoInput.files[0];
-                    if (file) {
-                        const url = URL.createObjectURL(file);
-                        storeVideo(url);
-                    }
-                };
-                videoInput.click(); // Trigger file input dialog
-            } else {
-                alert("Invalid choice. Please type 'link' or 'file'.");
+            addVideoContainer.style.display = 'block'; // Show add video container
+        });
+
+        chooseFileBtn.addEventListener('click', () => {
+            fileInput.click(); // Trigger file input click
+        });
+
+        fileInput.addEventListener('change', (event) => {
+            const file = event.target.files[0];
+            if (file) {
+                const url = URL.createObjectURL(file); // Create a temporary URL for the video file
+                userVideoIframe.src = url; // Set iframe source to the user video
+                videoPreview.style.display = 'block'; // Show video preview
+                copyLinkBtn.style.display = 'inline'; // Show copy link button
             }
         });
 
-        function storeVideo(videoUrl) {
-            // Store the video URL in localStorage
-            let userVideos = JSON.parse(localStorage.getItem('userVideos')) || [];
-            userVideos.push(videoUrl);
-            localStorage.setItem('userVideos', JSON.stringify(userVideos));
-            alert(`Your video has been safely posted on CoolKidZ! Here's your link: ${videoUrl}`);
-            loadUserVideos(); // Refresh the list of user videos
-        }
+        videoUrlInput.addEventListener('input', () => {
+            const url = videoUrlInput.value;
+            if (url) {
+                userVideoIframe.src = url; // Set iframe source to user-provided URL
+                videoPreview.style.display = 'block'; // Show video preview
+                copyLinkBtn.style.display = 'inline'; // Show copy link button
+            }
+        });
 
-        function loadUserVideos() {
-            const userVideos = JSON.parse(localStorage.getItem('userVideos')) || [];
-            userVideosContainer.innerHTML = ''; // Clear previous videos
-            userVideos.forEach(videoUrl => {
-                const videoElement = document.createElement('div');
-                videoElement.classList.add('video');
-                videoElement.innerHTML = `
-                    <iframe width="560" height="315" src="${videoUrl}" title="User uploaded video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Your uploaded video</p>
-                `;
-                userVideosContainer.appendChild(videoElement);
+        postVideoBtn.addEventListener('click', () => {
+            const username = localStorage.getItem('coolkidzUsername');
+            const videoUrl = videoUrlInput.value || userVideoIframe.src;
+            if (videoUrl) {
+                // Here, you could save the videoUrl associated with the username to your backend
+                alert(`Your video has been safely posted on CoolKidZ! Here is your URL: ${videoUrl}`);
+                copyLinkBtn.style.display = 'inline';
+            } else {
+                alert('Invalid video. Please try again.');
+            }
+        });
+
+        copyLinkBtn.addEventListener('click', () => {
+            const videoUrl = videoUrlInput.value || userVideoIframe.src;
+            navigator.clipboard.writeText(videoUrl).then(() => {
+                alert('Video URL copied to clipboard!');
+            }).catch(err => {
+                console.error('Failed to copy: ', err);
             });
-        }
+            // Redirect back to homepage after copying link
+            window.location.href = 'https://wafflenugget.github.io/CoolKidZ/';
+        });
 
         updateUI(); // Call this function to update the UI based on local storage
     </script>
