--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
             left: 10px;
         }
 
+        #prompt-message {
+            color: yellow; /* Different color for the prompt */
+            margin-top: 50px; /* Space below the welcome message */
+            font-size: 1.2em; /* Slightly larger font */
+        }
+
         button {
             padding: 10px;
             border: none;
@@ -48,7 +54,7 @@
 
         .container {
             text-align: center;
-            margin-top: 100px; /* Adjusted margin to position below welcome message */
+            margin-top: 20px; /* Adjusted margin to position below welcome message */
         }
 
         .video-container {
@@ -76,6 +82,7 @@
     </header>
     <div class="container">
         <h1>CoolKidZ</h1>
+        <div id="prompt-message">Please sign in if you have an account.</div> <!-- Prompt message -->
         <div class="video-container" id="video-list">
             <p>Videos:</p>
             <div class="video">
@@ -104,6 +111,7 @@
         const addVideoBtn = document.getElementById('add-video-btn');
         const welcomeMessage = document.getElementById('welcome-message');
         const usernameDisplay = document.getElementById('username-display');
+        const promptMessage = document.getElementById('prompt-message'); // Prompt message
         const addVideoContainer = document.getElementById('add-video-container');
         const chooseFileBtn = document.getElementById('choose-file-btn');
         const fileInput = document.getElementById('file-input');
@@ -121,12 +129,14 @@
                 signOutBtn.style.display = 'inline';
                 addVideoBtn.style.display = 'inline';
                 addVideoContainer.style.display = 'block'; // Show add video container
+                promptMessage.style.display = 'none'; // Hide prompt message
             } else {
                 usernameDisplay.textContent = '';
                 signInBtn.style.display = 'inline';
                 signOutBtn.style.display = 'none';
                 addVideoBtn.style.display = 'none';
                 addVideoContainer.style.display = 'none'; // Hide add video container
+                promptMessage.style.display = 'block'; // Show prompt message
             }
         }
 
@@ -195,4 +205,3 @@
         updateUI(); // Call this function to update the UI based on local storage
     </script>
 </body>
-</html>
