--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </header>
     <div class="container">
         <h1>CoolKidZ</h1>
-        <div id="prompt-message">Please sign in if you have an account.</div> <!-- Prompt message -->
+        <div id="prompt-message">Please sign in if you have an account else, sign in.</div> <!-- Prompt message -->
         <div class="video-container" id="video-list">
             <p>Videos:</p>
             <div class="video">
