--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </header>
     <div class="container">
         <div class="video-container" id="video-list">
-            <h3>Videos:</h3>
+            <h3>Videos:</h3> <!-- "Videos:" heading above the skateboard video -->
             <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/p3NXd3DhH08" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>Skateboard Video</p>
